Fixed dropdown layout issue Fixed show songs playing wrong track

--- a/public/styles/components.less
+++ b/public/styles/components.less
@@ -217,6 +217,7 @@ html body {
 html .dropdown-menu {
   .border-radius(0px);
   padding: 0px;
+  overflow-y: auto;
 
   > li {
 	margin: 0px;
